--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
   <div class="container">
     <div class="topbar">
       <div class="brand">
-        <h1>🌲 Sequoïa</h1>
+        <h1>🌲 Sequoïa 🌲 </h1>
         <div class="sub">
           Choose an option and pay Aaron on Venmo.<br />
           Venmo note will be prefilled as: <strong>“Camping sequoia”</strong>
