--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <div class="soldOutStamp"><span>SOLD OUT</span></div>
         <div class="price" id="title299">$299: Party Yurt</div>
         <div class="divider"></div>
-        <div class="desc" id="sub299">4 people capacity, 🛌 1 queen, 2 twin beds</div>
+        <div class="desc" id="sub299">4 people capacity <br /> 🛌 1 queen, 2 twin beds <br /> share bath/shower </div>
 
         <a id="pay299" class="btn" href="#" role="button">Pay $299 on Venmo</a>
         <img class="optPhoto" id="img299" src="yurt4.png" alt="Party Yurt photo (4 people)" />
@@ -490,7 +490,7 @@
   <div id="welcomeOverlay" class="welcomeOverlay" role="dialog" aria-modal="true">
     <div class="welcomeCard">
       <div class="welcomeTitle">We’re glad you are here ◡̈</div>
-      <div class="welcomeMsg">All prices is per person.</div>
+      <div class="welcomeMsg"><strong>“Camping sequoia”</strong>All prices are per person.<strong>“Camping sequoia”</strong></div>
       <button class="welcomeBtn" type="button" onclick="closeWelcome()">Let’s go</button>
     </div>
   </div>
