--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
   <div id="welcomeOverlay" class="welcomeOverlay" role="dialog" aria-modal="true">
     <div class="welcomeCard">
       <div class="welcomeTitle">We’re glad you are here ◡̈</div>
-      <div class="welcomeMsg"><strong>“Camping sequoia”</strong>All prices are per person.<strong>“Camping sequoia”</strong></div>
+      <div class="welcomeMsg"><strong>All prices are per person.</strong></div>
       <button class="welcomeBtn" type="button" onclick="closeWelcome()">Let’s go</button>
     </div>
   </div>
