--- a/index.html
+++ b/index.html
@@ -398,7 +398,10 @@
         <div class="soldOutStamp"><span>SOLD OUT</span></div>
         <div class="price" id="title299">$299: Party Yurt</div>
         <div class="divider"></div>
-        <div class="desc" id="sub299">4 people capacity <br /> 🛌 1 queen, 2 twin beds <br /> share bath/shower </div>
+        <div class="desc" id="sub299">4 people capacity. <br />
+          🛌 1 queen, 2 twin beds. <br />
+          shared bath/shower 
+        </div>
 
         <a id="pay299" class="btn" href="#" role="button">Pay $299 on Venmo</a>
         <img class="optPhoto" id="img299" src="yurt4.png" alt="Party Yurt photo (4 people)" />
