--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <div class="divider"></div>
         <div class="desc" id="sub299">4 people capacity. <br />
           🛌 1 queen, 2 twin beds. <br />
-          shared bath/shower 
+          🚿 Communal bath house/toilets
         </div>
 
         <a id="pay299" class="btn" href="#" role="button">Pay $299 on Venmo</a>
@@ -413,7 +413,10 @@
         <div class="soldOutStamp"><span>SOLD OUT</span></div>
         <div class="price" id="title449">$449: Lovers Yurt</div>
         <div class="divider"></div>
-        <div class="desc" id="sub449">2 people capacity, 🛌 1 queen bed</div>
+        <div class="desc" id="sub449">2 people capacity.  <br />
+          🛌 1 queen bed.  <br />
+          🚿 Communal bath house/toilets
+        </div>
 
         <a id="pay449" class="btn green" href="#" role="button">Pay $449 on Venmo</a>
         <img class="optPhoto" id="img449" src="yurt2.png" alt="Lovers Yurt photo (2 people)" />
@@ -425,7 +428,10 @@
         <div class="soldOutStamp"><span>SOLD OUT</span></div>
         <div class="price" id="title499">$499: Cabins</div>
         <div class="divider"></div>
-        <div class="desc" id="sub499">2 to 8 people per cabin, 🛌 queen beds</div>
+        <div class="desc" id="sub499">2 to 8 people per cabin (private rooms). <br />
+        🛌 queen beds. <br />
+        🚿 private bath toilets
+        </div>
 
         <a id="pay499" class="btn amber" href="#" role="button">Pay $499 on Venmo</a>
         <img class="optPhoto" id="img499" src="cabin.png" alt="Cabin photo" />
@@ -437,7 +443,10 @@
         <div class="soldOutStamp"><span>SOLD OUT</span></div>
         <div class="price" id="title349">$349: Friends' hut</div>
         <div class="divider"></div>
-        <div class="desc" id="sub349">2 people capacity, 🛌 2 twin beds</div>
+        <div class="desc" id="sub349">2 people capacity. <br /> 
+        🛌 2 twin beds. <br />
+        🚿 Communal bath house/toilets
+        </div>
 
         <a id="pay349" class="btn purple" href="#" role="button">Pay $349 on Venmo</a>
         <img class="optPhoto" id="img349" src="bunk.png" alt="Bunk / Friends hut photo" />
