--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <div class="divider"></div>
         <div class="desc" id="sub299">4 people capacity. <br />
           🛌 1 queen, 2 twin beds. <br />
-          🚿 Communal bath house/toilets
+          🚿 Communal bath house/toilets.  <br />
         </div>
 
         <a id="pay299" class="btn" href="#" role="button">Pay $299 on Venmo</a>
@@ -415,7 +415,7 @@
         <div class="divider"></div>
         <div class="desc" id="sub449">2 people capacity.  <br />
           🛌 1 queen bed.  <br />
-          🚿 Communal bath house/toilets
+          🚿 Communal bath house/toilets. <br />
         </div>
 
         <a id="pay449" class="btn green" href="#" role="button">Pay $449 on Venmo</a>
@@ -430,7 +430,7 @@
         <div class="divider"></div>
         <div class="desc" id="sub499">2 to 8 people per cabin (private rooms). <br />
         🛌 queen beds. <br />
-        🚿 private bath toilets
+        🚿 private bath toilets. <br />
         </div>
 
         <a id="pay499" class="btn amber" href="#" role="button">Pay $499 on Venmo</a>
@@ -445,7 +445,7 @@
         <div class="divider"></div>
         <div class="desc" id="sub349">2 people capacity. <br /> 
         🛌 2 twin beds. <br />
-        🚿 Communal bath house/toilets
+        🚿 Communal bath house/toilets. <br />
         </div>
 
         <a id="pay349" class="btn purple" href="#" role="button">Pay $349 on Venmo</a>
