--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 
         <a id="pay299" class="btn" href="#" role="button">Pay $299 on Venmo</a>
         <img class="optPhoto" id="img299" src="yurt4.png" alt="Party Yurt photo (4 people)" />
-        <div class="tiny">@aaron_levy</div>
+        <div class="tiny">@sinabigdeli</div>
       </div>
 
       <!-- 449 Lovers Yurt -->
@@ -414,7 +414,7 @@
 
         <a id="pay449" class="btn green" href="#" role="button">Pay $449 on Venmo</a>
         <img class="optPhoto" id="img449" src="yurt2.png" alt="Lovers Yurt photo (2 people)" />
-        <div class="tiny">@aaron_levy</div>
+        <div class="tiny">@sinabigdeli</div>
       </div>
 
       <!-- 499 Cabins -->
@@ -426,7 +426,7 @@
 
         <a id="pay499" class="btn amber" href="#" role="button">Pay $499 on Venmo</a>
         <img class="optPhoto" id="img499" src="cabin.png" alt="Cabin photo" />
-        <div class="tiny">@aaron_levy</div>
+        <div class="tiny">@sinabigdeli</div>
       </div>
 
       <!-- 349 Friends' hut -->
@@ -438,7 +438,7 @@
 
         <a id="pay349" class="btn purple" href="#" role="button">Pay $349 on Venmo</a>
         <img class="optPhoto" id="img349" src="bunk.png" alt="Bunk / Friends hut photo" />
-        <div class="tiny">@aaron_levy</div>
+        <div class="tiny">@sinabigdeli</div>
       </div>
 
       <!-- 300 Van lifers -->
@@ -450,7 +450,7 @@
 
         <a id="pay300" class="btn rose" href="#" role="button">Pay $300 on Venmo</a>
         <img class="optPhoto" id="img300" src="van.png" alt="Camper van photo" />
-        <div class="tiny">@aaron_levy</div>
+        <div class="tiny">@sinabigdeli</div>
       </div>
     </div>
 
@@ -467,7 +467,7 @@
         <div class="step"><div class="n">STEP 5</div><div class="t">Select saved QR ➜ Pay</div></div>
       </div>
 
-      <img class="qrImg" alt="Venmo QR code for @aaron_levy" src="aaronvenmo.png" />
+      <img class="qrImg" alt="Venmo QR code for @sinabigdeli" src="sinabigdeli.png" />
 
       <div class="note">
         Don’t forget: note should say <strong>Camping sequoia</strong> and choose the correct amount.
@@ -502,7 +502,7 @@
     const ADMIN_PASSWORD = "Seq123";
     const ADMIN_TOKEN_STORAGE_KEY = "sequoia_admin_token_v1";
     const NOTE_TEXT = "Camping sequoia";
-    const RECIPIENT = "aaron_levy";
+    const RECIPIENT = "sinabigdeli";
     const POLL_MS = 8000;
 
     const ID_MAP = {
