--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         <div class="step"><div class="n">STEP 5</div><div class="t">Select saved QR ➜ Pay</div></div>
       </div>
 
-      <img class="qrImg" alt="Venmo QR code for @sinabigdeli" src="sinabigdeli.png" />
+      <img class="qrImg" alt="Venmo QR code for @sinabigdeli" src="sinabigdeli.jpg" />
 
       <div class="note">
         Don’t forget: note should say <strong>Camping sequoia</strong> and choose the correct amount.
