--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
       <div class="brand">
         <h1>🌲 Sequoïa 🌲 </h1>
         <div class="sub">
-          Choose an option and pay Aaron on Venmo.<br />
+          Choose an option and pay Sina on Venmo.<br />
           Venmo note will be prefilled as: <strong>“Camping sequoia”</strong>
         </div>
       </div>
