--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
         <div class="soldOutStamp"><span>SOLD OUT</span></div>
         <div class="price" id="title499">$499: Cabins</div>
         <div class="divider"></div>
-        <div class="desc" id="sub499">2 to 8 people per cabin (private rooms). 🛌 1 queen bed per room.🚿 private bath toilets.</div>
+        <div class="desc" id="sub499">Private room for 2. 🛌 1 queen bed per room.🚿 private bath toilets.</div>
 
         <a id="pay499" class="btn amber" href="#" role="button">Pay $499 on Venmo</a>
         <img class="optPhoto" id="img499" src="cabin.png" alt="Cabin photo" />
